@@ -18,8 +18,8 @@
  */
 package org.apache.pinot.query.mailbox;
 
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.atomic.AtomicInteger;
 import javax.annotation.Nullable;
@@ -34,9 +34,10 @@ import org.apache.pinot.query.runtime.operator.MailboxSendOperator;
 import org.apache.pinot.query.runtime.operator.OperatorTestUtil;
 import org.apache.pinot.query.runtime.plan.MultiStageQueryStats;
 import org.apache.pinot.query.testutils.QueryTestUtils;
+import org.apache.pinot.spi.config.instance.InstanceType;
 import org.apache.pinot.spi.env.PinotConfiguration;
 import org.apache.pinot.spi.exception.QueryErrorCode;
-import org.apache.pinot.spi.utils.CommonConstants;
+import org.apache.pinot.spi.utils.CommonConstants.MultiStageQueryRunner;
 import org.apache.pinot.util.TestUtils;
 import org.testng.annotations.AfterClass;
 import org.testng.annotations.BeforeClass;
@@ -61,11 +62,10 @@ public class MailboxServiceTest {
   @BeforeClass
   public void setUp() {
     PinotConfiguration config = new PinotConfiguration(
-        Collections.singletonMap(CommonConstants.MultiStageQueryRunner.KEY_OF_MAX_INBOUND_QUERY_DATA_BLOCK_SIZE_BYTES,
-            MAX_DATA_BLOCK_SIZE));
-    _mailboxService1 = new MailboxService("localhost", QueryTestUtils.getAvailablePort(), config);
+        Map.of(MultiStageQueryRunner.KEY_OF_MAX_INBOUND_QUERY_DATA_BLOCK_SIZE_BYTES, MAX_DATA_BLOCK_SIZE));
+    _mailboxService1 = new MailboxService("localhost", QueryTestUtils.getAvailablePort(), InstanceType.BROKER, config);
     _mailboxService1.start();
-    _mailboxService2 = new MailboxService("localhost", QueryTestUtils.getAvailablePort(), config);
+    _mailboxService2 = new MailboxService("localhost", QueryTestUtils.getAvailablePort(), InstanceType.SERVER, config);
     _mailboxService2.start();
   }
 
@@ -92,23 +92,26 @@ public class MailboxServiceTest {
       sendingMailbox.send(OperatorTestUtil.block(DATA_SCHEMA, new Object[]{Integer.toString(i)}));
     }
     sendingMailbox.send(SuccessMseBlock.INSTANCE, MultiStageQueryStats.emptyStats(SENDER_STAGE_ID).serialize());
-    sendingMailbox.complete();
 
     ReceivingMailbox receivingMailbox = _mailboxService1.getReceivingMailbox(mailboxId);
     receivingMailbox.registeredReader(() -> {
     });
     for (int i = 0; i < ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS - 1; i++) {
-      assertEquals(receivingMailbox.getNumPendingBlocks(), ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS - i);
+      assertEquals(receivingMailbox.getNumPendingBlocks(), ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS - i - 1);
       List<Object[]> rows = getRows(receivingMailbox);
       assertEquals(rows.size(), 1);
       assertEquals(rows.get(0), new Object[]{Integer.toString(i)});
     }
-    assertEquals(receivingMailbox.getNumPendingBlocks(), 1);
+    assertEquals(receivingMailbox.getNumPendingBlocks(), 0);
     ReceivingMailbox.MseBlockWithStats block = receivingMailbox.poll();
     assertNotNull(block);
     assertTrue(block.getBlock().isSuccess());
     assertEquals(receivingMailbox.getNumPendingBlocks(), 0);
-    assertNull(receivingMailbox.poll());
+
+    // Following calls to poll() should return the same eos block
+    block = receivingMailbox.poll();
+    assertNotNull(block);
+    assertTrue(block.getBlock().isSuccess());
   }
 
   @Test
@@ -129,22 +132,20 @@ public class MailboxServiceTest {
       sendingMailbox.send(OperatorTestUtil.block(DATA_SCHEMA, new Object[]{Integer.toString(i)}));
     }
     sendingMailbox.send(SuccessMseBlock.INSTANCE, MultiStageQueryStats.emptyStats(SENDER_STAGE_ID).serialize());
-    sendingMailbox.complete();
 
     assertEquals(numCallbacks.get(), ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS);
 
     for (int i = 0; i < ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS - 1; i++) {
-      assertEquals(receivingMailbox.getNumPendingBlocks(), ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS - i);
+      assertEquals(receivingMailbox.getNumPendingBlocks(), ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS - i - 1);
       List<Object[]> rows = getRows(receivingMailbox);
       assertEquals(rows.size(), 1);
       assertEquals(rows.get(0), new Object[]{Integer.toString(i)});
     }
-    assertEquals(receivingMailbox.getNumPendingBlocks(), 1);
+    assertEquals(receivingMailbox.getNumPendingBlocks(), 0);
     MseBlock block = readBlock(receivingMailbox);
     assertNotNull(block);
     assertTrue(block.isEos());
     assertEquals(receivingMailbox.getNumPendingBlocks(), 0);
-    assertNull(receivingMailbox.poll());
   }
 
   @Test
@@ -215,7 +216,7 @@ public class MailboxServiceTest {
     // Send one data block and then cancel
     sendingMailbox.send(OperatorTestUtil.block(DATA_SCHEMA, new Object[]{"0"}));
     receivingMailbox.cancel();
-    assertEquals(numCallbacks.get(), 1);
+    assertEquals(numCallbacks.get(), 2);
 
     // Data blocks will be cleaned up
     assertEquals(receivingMailbox.getNumPendingBlocks(), 0);
@@ -226,7 +227,7 @@ public class MailboxServiceTest {
     // Cancel is idempotent for both sending and receiving mailbox, so safe to call multiple times
     sendingMailbox.cancel(new Exception("TEST ERROR"));
     receivingMailbox.cancel();
-    assertEquals(numCallbacks.get(), 1);
+    assertEquals(numCallbacks.get(), 2);
     assertEquals(receivingMailbox.getNumPendingBlocks(), 0);
   }
 
@@ -283,7 +284,8 @@ public class MailboxServiceTest {
 
     // Next send will throw exception because buffer is full
     try {
-      sendingMailbox.send(SuccessMseBlock.INSTANCE, MultiStageQueryStats.emptyStats(SENDER_STAGE_ID).serialize());
+      // The block sent must be a data block, as error and eos blocks are always accepted
+      sendingMailbox.send(OperatorTestUtil.block(DATA_SCHEMA, new Object[]{Integer.toString(1)}));
       fail("Except exception when sending data after buffer is full");
     } catch (Exception e) {
       // Expected
@@ -338,11 +340,10 @@ public class MailboxServiceTest {
     // Sends are non-blocking as long as channel capacity is not breached
     SendingMailbox sendingMailbox =
         _mailboxService2.getSendingMailbox("localhost", _mailboxService1.getPort(), mailboxId, Long.MAX_VALUE, _stats);
-    for (int i = 0; i < ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS - 1; i++) {
+    for (int i = 0; i < ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS; i++) {
       sendingMailbox.send(OperatorTestUtil.block(DATA_SCHEMA, new Object[]{Integer.toString(i)}));
     }
     sendingMailbox.send(SuccessMseBlock.INSTANCE, MultiStageQueryStats.emptyStats(SENDER_STAGE_ID).serialize());
-    sendingMailbox.complete();
 
     // Wait until all the mails are delivered
     ReceivingMailbox receivingMailbox = _mailboxService1.getReceivingMailbox(mailboxId);
@@ -352,18 +353,16 @@ public class MailboxServiceTest {
         aVoid -> receivingMailbox.getNumPendingBlocks() == ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS, 1000L,
         "Failed to deliver mails");
 
-    for (int i = 0; i < ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS - 1; i++) {
+    for (int i = 0; i < ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS; i++) {
       assertEquals(receivingMailbox.getNumPendingBlocks(), ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS - i);
       List<Object[]> rows = getRows(receivingMailbox);
       assertEquals(rows.size(), 1);
       assertEquals(rows.get(0), new Object[]{Integer.toString(i)});
     }
-    assertEquals(receivingMailbox.getNumPendingBlocks(), 1);
+    assertEquals(receivingMailbox.getNumPendingBlocks(), 0);
     MseBlock block = readBlock(receivingMailbox);
     assertNotNull(block);
     assertTrue(block.isSuccess());
-    assertEquals(receivingMailbox.getNumPendingBlocks(), 0);
-    assertNull(receivingMailbox.poll());
   }
 
   @Test
@@ -388,24 +387,22 @@ public class MailboxServiceTest {
       sendingMailbox.send(OperatorTestUtil.block(DATA_SCHEMA, new Object[]{Integer.toString(i)}));
     }
     sendingMailbox.send(SuccessMseBlock.INSTANCE, MultiStageQueryStats.emptyStats(SENDER_STAGE_ID).serialize());
-    sendingMailbox.complete();
 
     // Wait until all the mails are delivered
     receiveMailLatch.await();
     assertEquals(numCallbacks.get(), ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS);
 
     for (int i = 0; i < ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS - 1; i++) {
-      assertEquals(receivingMailbox.getNumPendingBlocks(), ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS - i);
+      assertEquals(receivingMailbox.getNumPendingBlocks(), ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS - i - 1);
       List<Object[]> rows = getRows(receivingMailbox);
       assertEquals(rows.size(), 1);
       assertEquals(rows.get(0), new Object[]{Integer.toString(i)});
     }
-    assertEquals(receivingMailbox.getNumPendingBlocks(), 1);
+    assertEquals(receivingMailbox.getNumPendingBlocks(), 0);
     MseBlock block = readBlock(receivingMailbox);
     assertNotNull(block);
     assertTrue(block.isSuccess());
     assertEquals(receivingMailbox.getNumPendingBlocks(), 0);
-    assertNull(receivingMailbox.poll());
   }
 
   @Test
@@ -480,12 +477,13 @@ public class MailboxServiceTest {
   @Test
   public void testRemoteCancelledBecauseResourceExhausted()
     throws Exception {
-    PinotConfiguration config = new PinotConfiguration(
-      Collections.singletonMap(CommonConstants.MultiStageQueryRunner.KEY_OF_MAX_INBOUND_QUERY_DATA_BLOCK_SIZE_BYTES,
-        1));
-    var mailboxService3 = new MailboxService("localhost", QueryTestUtils.getAvailablePort(), config);
+    PinotConfiguration config =
+        new PinotConfiguration(Map.of(MultiStageQueryRunner.KEY_OF_MAX_INBOUND_QUERY_DATA_BLOCK_SIZE_BYTES, 1));
+    MailboxService mailboxService3 =
+        new MailboxService("localhost", QueryTestUtils.getAvailablePort(), InstanceType.BROKER, config);
     mailboxService3.start();
-    var mailboxService4 = new MailboxService("localhost", QueryTestUtils.getAvailablePort(), config);
+    MailboxService mailboxService4 =
+        new MailboxService("localhost", QueryTestUtils.getAvailablePort(), InstanceType.SERVER, config);
     mailboxService4.start();
 
     String mailboxId = MailboxIdUtils.toMailboxId(_requestId++, SENDER_STAGE_ID, 0, RECEIVER_STAGE_ID, 0);
@@ -539,7 +537,7 @@ public class MailboxServiceTest {
     sendingMailbox.send(OperatorTestUtil.block(DATA_SCHEMA, new Object[]{"0"}));
     receiveMailLatch.await();
     receivingMailbox.cancel();
-    assertEquals(numCallbacks.get(), 1);
+    assertEquals(numCallbacks.get(), 2);
 
     // Data blocks will be cleaned up
     assertEquals(receivingMailbox.getNumPendingBlocks(), 0);
@@ -550,7 +548,7 @@ public class MailboxServiceTest {
     // Cancel is idempotent for both sending and receiving mailbox, so safe to call multiple times
     sendingMailbox.cancel(new Exception("TEST ERROR"));
     receivingMailbox.cancel();
-    assertEquals(numCallbacks.get(), 1);
+    assertEquals(numCallbacks.get(), 2);
     assertEquals(receivingMailbox.getNumPendingBlocks(), 0);
   }
 
@@ -622,7 +620,8 @@ public class MailboxServiceTest {
     }
 
     // Next send will be blocked on the receiver side and cause exception after timeout
-    sendingMailbox.send(SuccessMseBlock.INSTANCE, MultiStageQueryStats.emptyStats(SENDER_STAGE_ID).serialize());
+    // We need to send a data block, given we don't block on EOS
+    sendingMailbox.send(OperatorTestUtil.block(DATA_SCHEMA, new Object[]{payload}));
     receiveMailLatch.await();
     assertEquals(numCallbacks.get(), ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS + 1);
 
@@ -668,7 +667,6 @@ public class MailboxServiceTest {
     sendingMailbox.send(OperatorTestUtil.block(DATA_SCHEMA, new Object[]{"0"}));
     // send a metadata block
     sendingMailbox.send(SuccessMseBlock.INSTANCE, MultiStageQueryStats.emptyStats(SENDER_STAGE_ID).serialize());
-    sendingMailbox.complete();
 
     // sending side should early terminate
     TestUtils.waitForCondition(aVoid -> sendingMailbox.isEarlyTerminated(), 1000L, "Failed to early-terminate sender");
